force-app/main/default/objects/JTBD_Job__c/JTBD_Job__c.object-meta.xml
<CustomObject>
    <description>Object used to track and manage Jobs-to-be-Done framework job definitions within the organization. Stores job statements, persona associations, pain points, success metrics, and contextual information for customer job analysis.</description>
    <label>JTBD Job</label>
    <nameField>
        <label>Job Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>JTBD Jobs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>