force-app/main/default/objects/JTBD_Job__c/fields/Big_Job_Context__c.field-meta.xml
<CustomField>
    <fullName>Big_Job_Context__c</fullName>
    <description>The larger emotional or social job that this job supports or contributes to</description>
    <inlineHelpText>Describe the higher-level emotional or social job that drives this need. What larger goal or aspiration does this job serve?</inlineHelpText>
    <label>Big Job Context</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>