force-app/main/default/objects/JTBD_Job__c/fields/Current_Solutions__c.field-meta.xml
<CustomField>
    <fullName>Current_Solutions__c</fullName>
    <description>Existing tools, processes, or workarounds the persona currently uses to get this job done</description>
    <inlineHelpText>Document current approaches, tools, or processes being used. Include both formal solutions and informal workarounds.</inlineHelpText>
    <label>Current Solutions</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>