force-app/main/default/objects/JTBD_Job__c/fields/Frequency__c.field-meta.xml
<CustomField>
    <fullName>Frequency__c</fullName>
    <description>How often this job typically needs to be done by the persona</description>
    <inlineHelpText>Select how frequently this job occurs. This helps prioritize automation and improvement opportunities.</inlineHelpText>
    <label>Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Daily</fullName>
            </value>
            <value>
                <fullName>Weekly</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>As-Needed</fullName>
                <default>true</default>
                <label>As-Needed</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>