force-app/main/default/objects/JTBD_Job__c/fields/Job_Statement__c.field-meta.xml
<CustomField>
    <fullName>Job_Statement__c</fullName>
    <description>The main job statement describing what the customer is trying to accomplish</description>
    <inlineHelpText>Enter the specific job the customer needs to get done. Use the format &quot;When I [situation], I want to [motivation], so I can [expected outcome]&quot; for best results.</inlineHelpText>
    <label>Job Statement</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>