force-app/main/default/objects/JTBD_Job__c/fields/Job_Type__c.field-meta.xml
<CustomField>
    <fullName>Job_Type__c</fullName>
    <description>Classification of the job based on scope and complexity within the Jobs-to-be-Done framework</description>
    <inlineHelpText>Select the job hierarchy level: Micro (specific tasks), Little (functional jobs), or Big (emotional/social jobs)</inlineHelpText>
    <label>Job Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Micro</fullName>
                <default>true</default>
                <label>Micro</label>
            </value>
            <value>
                <fullName>Little</fullName>
            </value>
            <value>
                <fullName>Big</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>