force-app/main/default/objects/JTBD_Job__c/fields/Little_Job_Context__c.field-meta.xml
<CustomField>
    <fullName>Little_Job_Context__c</fullName>
    <description>The functional job or process that this micro job is part of</description>
    <inlineHelpText>Describe the functional process or workflow that this job fits within. What larger functional job does this support?</inlineHelpText>
    <label>Little Job Context</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>