force-app/main/default/objects/JTBD_Job__c/fields/Pain_Points__c.field-meta.xml
<CustomField>
    <fullName>Pain_Points__c</fullName>
    <description>Specific frustrations and obstacles the persona faces when trying to accomplish this job</description>
    <inlineHelpText>List the specific pain points, challenges, or frustrations. Use bullet points or separate lines for multiple pain points.</inlineHelpText>
    <label>Pain Points</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>