force-app/main/default/objects/JTBD_Job__c/fields/Persona__c.field-meta.xml
<CustomField>
    <fullName>Persona__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference to the persona who needs to get this job done</description>
    <inlineHelpText>Select the primary persona associated with this job. If the persona doesn&apos;t exist, create it first in the Personas section.</inlineHelpText>
    <label>Persona</label>
    <referenceTo>JTBD_Persona__c</referenceTo>
    <relationshipLabel>Jobs</relationshipLabel>
    <relationshipName>Jobs</relationshipName>
    <type>Lookup</type>
</CustomField>