force-app/main/default/objects/JTBD_Job__c/fields/Success_Metrics__c.field-meta.xml
<CustomField>
    <fullName>Success_Metrics__c</fullName>
    <description>Measurable outcomes that indicate successful completion of this job</description>
    <inlineHelpText>Define how success is measured for this job. Include quantitative metrics (time saved, accuracy improved) and qualitative indicators (satisfaction, confidence).</inlineHelpText>
    <label>Success Metrics</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>