force-app/main/default/objects/JTBD_Job__c/fields/Time_Per_Occurrence__c.field-meta.xml
<CustomField>
    <fullName>Time_Per_Occurrence__c</fullName>
    <description>Average time in minutes required to complete this job each time it occurs</description>
    <inlineHelpText>Enter the typical time in minutes needed to complete this job from start to finish.</inlineHelpText>
    <label>Time Per Occurrence (Minutes)</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>